docs/envoy/v1.13.0/_sources/api-v3/extensions/filters/http/lua/v3/lua.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/http/lua/v3/lua.proto:

Lua
===

.. _extension_envoy.filters.http.lua:


This extension may be referenced by the qualified name *envoy.filters.http.lua*

.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.

Lua :ref:`configuration overview <config_http_filters_lua>`.

.. _envoy_v3_api_msg_extensions.filters.http.lua.v3.Lua:

extensions.filters.http.lua.v3.Lua
----------------------------------

`[extensions.filters.http.lua.v3.Lua proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/http/lua/v3/lua.proto#L16>`_


.. code-block:: json

  {
    "inline_code": "..."
  }

.. _envoy_v3_api_field_extensions.filters.http.lua.v3.Lua.inline_code:

inline_code
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The Lua code that Envoy will execute. This can be a very small script that
  further loads code from disk if desired. Note that if JSON configuration is used, the code must
  be properly escaped. YAML configuration may be easier to read since YAML supports multi-line
  strings so complex scripts can be easily expressed inline in the configuration.
  
  

